<resources>
    <string name="app_name">C196</string>
    <string name="action_settings">Settings</string>
    <string name="termButton">Term List</string>
    <string name="courseButton">Course List</string>
    <string name="assignmentButton">Assigment List</string>
    <string name="AppTitle">Course View App</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">notificaiton channel description</string>
</resources>
