<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ntlts.c196.TermListActivity">
    <item
        android:id="@+id/add"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/add"
        android:visible="true"
        app:showAsAction="never|collapseActionView|withText" />
    <item
        android:id="@+id/termSave"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/termDelete"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="never" />
</menu>
